--- a/TODO
+++ b/TODO
@@ -2,28 +2,31 @@ cosmetic:
     fullscreen map!
 
 content:
-    for-real data import
-    formalize recommender
-    whether I've visited or not
-    incorporate London / nyc / upstate NYC onto this map!
-    categorize restaurants!
+    for-real data import from various mymaps repos
+    per-location metadata:
+        formalize recommender of location (hannah, lisa etc)
+        add whether I've visited or not
+        date added...?
+        categorize restaurants!
     size based on essentialness?
-    tours through nyc?
-    red caboose (is this just an old kmz file?!)
-
 
 what to do on detail pages:
-    use places API
-                    figure out how to pull in POI metadata
+    use places API:
+        figure out how to pull in POI metadata
+    should I even show a map?  if so -- disable layers / clustering
     pull out quotes nice and big?
     display {{content}}
 
 input methods:
-    easy way to add more locations, perhaps via binscript
+    easy way to add new locations, perhaps via binscript:
+        * find lat / lon
+        * scrape from google?
+
+Generate kml file from database
+    whenever we build, use liquidt o create a servable kml file for others to import
 
 cbbs:
     RSS feed of recent locations (last_modified_at sucks!)
-    ways to add more complex features (walks?) https://leafletjs.com/examples/geojson/
+    ways to add more complex features (walks / hikes?) https://leafletjs.com/examples/geojson/
     add mobile support: Mobile: https://leafletjs.com/examples/mobile/
 
-add to README https://github.com/lvoogdt/Leaflet.awesome-markers
