Cause script to bomb out in the event of multiple places with the same name colliding
I'll fix this later but for now it'll stop people from accidentally clobbering their data!

--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ cosmetic:
 
 content:
     for-real data import from various mymaps repos
+    store multiple branches of one location in the same file or one file per?
     per-location metadata:
         formalize recommender of location (hannah, lisa etc)
         add whether I've visited or not
