--- a/TODO
+++ b/TODO
@@ -1,90 +1,122 @@
-https://github.com/gregallensworth/L.Control.jQueryDialog/blob/master/example/index.html
+favicon!
+first few clicks never load...
+panTo animation is still totally wrong...
+side-by-side image / text -- https://stackoverflow.com/questions/38170366/leaflet-adjust-popup-to-picture-size
+unescape key for earlier printout
+lower radius!
 
-restore, about / kml download links!
-{ site.description | escape }}
-Curated by [Jesse Spielman](http://heavyimage.com), with plenty of suggestions from friends!
+rebase history
+    * simplify
+    * purge config files
+    * get cache out of github as violates TOS
 
-
-what to do on detail pages:
-    cache fq business id on .md file
-    turn off rendering of locations
-    code:
-
-        // ZOMG: https://gist.github.com/bsudekum/6063237
-        $.ajax({
-        type: "GET",
-        dataType: "jsonp",
-        cache: false,
-        url: 'https://api.foursquare.com/v2/venues/search?ll=' + 40.78 + ',' + -73.96 + '&limit=30&client_id=3ODULPRCZOZL43JVOBNUBAUPXD5MXKBX24DOUZYNO0V3SEUL&client_secret=MBM0IB0YS1JZB2QLZ3WZDHSZAC10JOO0JY4VGDOF0IU3E5AH&v=20180509',
-        success: function(data){
-        console.log(data)
-        var base = data.response.venues
-
-        $.each(base, function(index){
-            var url = base[index].url;
-            var name = base[index].name;
-            console.log(url)
-            console.log(name)
-            })
-        }
-        });
-
-    overlay pops up:
-        make overlay
-        show:
-            name
-            my review
-            # of locations
-            recommender
-            display {{content}}
-        foursquare!
-            FS review
-            photos!
-            phone number
-            website
-            description
-            (or missing FS business ID)
+app:
+    center to where you are now:
+        navigator.geolocation.getCurrentPosition(function(location) {
+        console.log(location.coords.latitude);
+        console.log(location.coords.longitude);
+            console.log(location.coords.accuracy);
+            });
 
 
-center to where you are now:
-    navigator.geolocation.getCurrentPosition(function(location) {
-    console.log(location.coords.latitude);
-    console.log(location.coords.longitude);
-        console.log(location.coords.accuracy);
-        });
+scripts:
+    kmz import script:
+        support kmls as well
+        make layer remapping a bit easier to understand...
+    input methods tool:
+        easy way to add new locations, via binscript:
+            * find lat / lon
+            * pre-populate-cache
+            * set all values on metadata
+            * parse config for layers
+    modify db
+        remove old data without wiping out cache?
 
-content:
+
+Content:
+    ~/projects/projects.heavyimage.com/_projects/nyc_map.md
+
+    fetch lastest kmz from nyc
+        decommission!
+    search for missing descriptions!
+    about:
+        add information about foursquare to buttons
     fix script to import spaces as underscores!
     for-real data import from various mymaps repos
         london
         upstate ny
+        just way more content (go through whole Dir structure?)
+        jekyll site for kml?!
+        the lodge!
+        dandan noodles!
+        notes on my map thing
+        melissa's map:
+            https://www.google.com/maps/d/viewer?mid=1U4mRTX8go-Fv9h7oqhPLsnKQLEU&ll=40.675241103902614%2C-73.95993132364504&z=15 (but also downloaded)
+        mapping project
+            once I have a bunch of per-city kmls present them all as one?
+            OMG do this via jekyll with a file per thing!!
+
+
         all of nyc
+            new-york historical...?
+            by choloe bleeker (no info?!)
+            dakar crepes?!
+            television and radio
+            multiple van leeuwans
+            westville hudson!
+            peter lugers -- add rec
+            sunshine -- best sprouts
+            sleep no more?
             brookyln strategist / hanah sushi / best bits of central park!
 
-MD improvements:
-    per-location metadata:
-        formalize recommender of location (hannah, lisa etc)
-        add whether I've visited or not
-        date added...?
-        categorize restaurants!
-        size based on essentialness?
 
-kmz import script:
-    support kmls as well
-    make layer remapping a bit easier to understand...
+deploy:
+    send to nick gottlieb
+    store cache somewhere better
+    better code / code cleanup (cache as instance?)
+    wait 1 second between queries?
+    test expiry
+    cors thing -- harden?
+    make sure this whole repo still works if you don't want to run the flask server
+    move everything to flask: Flask-FlatPages
+    deploy via lambda or some crazy shit: semi-static...?
+    give FS my credit card info...?
+    enable nginx caching:
+        serve flask at some clever subdomain?
+        how to avoid DDOS attacks on flask app --  https://flask-limiter.readthedocs.io/en/stable/
 
-input methods tool:
-    easy way to add new locations, via binscript:
-        * find lat / lon
-        * scrape from google?
+    Update readme!
+        make file to run both services?
+        docs for scripts
+        explain deployment procedure
 
 cbbs:
+    better loading indicator!
     RSS feed of recent locations (last_modified_at sucks!)
+    categorize restaurants (via foursquare...?)
+    layers for essentials / multiple layers per markers -- https://stackoverflow.com/questions/35156322/how-can-i-add-one-leaflet-marker-to-multiple-layergroups
     ways to add more complex features (walks / hikes?) https://leafletjs.com/examples/geojson/
+    now that API requests are coming from a python app -- investigate other APIs?
+        yelp
+        google
+        seamless?
     add mobile support: Mobile: https://leafletjs.com/examples/mobile/
-    kml export:
+    update kml export:
         include {{ content }} or other MD?
     auto fit bounds to selection of points:
         var group = new L.featureGroup([marker1, marker2, marker3]);
         map.fitBounds(group.getBounds());
         equidistant between NY / Montral but zoom was wrong!
+    More overlay pops up?
+        markdown:
+            content vs. description is ???
+            formalize recommender of location (hannah, lisa etc)?
+            whether I've visited or not?
+            date added...?
+        metadata:
+            phone number?
+            menu link
+            phrases! (any in the cache?)
+            take credit cards?
+            outdoor seating?
+            wifi?
